refactor: update crud functionality for post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 # Reduce logging level to make sure the application works with SAM local
 # https://github.com/aws/serverless-java-container/issues/134
 logging.level.root=WARN
+
+aws.dynamodb.access-key=${IAM_USER_ACCESS_KEY}
+aws.dynamodb.secret-key=${IAM_USER_SECRET_KEY}
+aws.dynamodb.region=${AWS_REGION}
+aws.dynamodb.endpoint=https://dynamodb.${AWS_REGION}.amazonaws.com
+aws.dynamodb.tableName=${DYNAMODB_TABLE_NAME}
+
+# to load environment variables during build and local test
+spring.config.import=optional:file:.env[.properties]
