--- a/template.yml
+++ b/template.yml
@@ -167,7 +167,7 @@ Outputs:
 
   CognitoLoginURL:
     Description: Cognito User Pool Application Client Hosted Login UI URL
-    Value: !Sub "https://${UserPoolClient}.auth.${AWS::Region}.amazoncognito.com/login?client_id=${UserPoolClient}&response_type=code&redirect_uri=https://spring.io/"
+    Value: !Sub "https://${UserPoolDomain}.auth.${AWS::Region}.amazoncognito.com/login?client_id=${UserPoolClient}&response_type=code&redirect_uri=https://spring.io/"
 
   CognitoAuthCommand:
     Description: AWS CLI command for Amazon Cognito User Pool authentication
